# bevy_qoi

./: Cargo.toml  README.md
assets/: 512x512.qoi
examples/: display.rs
src/: lib.rs
